.NET: Add object explorer to web API test

--- a/csharp-api/test/Test/WebAPI/index.html
+++ b/csharp-api/test/Test/WebAPI/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Monster Hunter Wilds</h1>
-<p class="subtitle">REFramework.NET Live Dashboard</p>
+<p class="subtitle">REFramework.NET Live Dashboard &mdash; <a class="nav-link" href="/explorer.html">Object Explorer</a></p>
 
 <div class="grid">
   <div class="card" id="player-card">
