--- a/csharp-api/test/Test/WebAPI/index.html
+++ b/csharp-api/test/Test/WebAPI/index.html
@@ -41,6 +41,16 @@
     <div id="equip-content"><span class="error-msg">Loading...</span></div>
   </div>
 
+  <div class="card" id="palico-card">
+    <h2><span class="dot"></span> Palico</h2>
+    <div id="palico-content"><span class="error-msg">Loading...</span></div>
+  </div>
+
+  <div class="card" id="huntlog-card">
+    <h2><span class="dot"></span> Hunt Log <span id="huntlog-count" style="color:#8b949e;font-size:0.8em"></span></h2>
+    <div class="huntlog-list" id="huntlog-content"><span class="error-msg">Loading...</span></div>
+  </div>
+
   <div class="card" id="inventory-card">
     <h2><span class="dot"></span> Item Pouch <span id="inventory-count" style="color:#8b949e;font-size:0.8em"></span></h2>
     <div class="inventory-list" id="inventory-content"><span class="error-msg">Loading...</span></div>
@@ -49,6 +59,18 @@
   <div class="card" id="mesh-card">
     <h2><span class="dot"></span> Mesh Visibility</h2>
     <div class="mesh-list" id="mesh-content"><span class="error-msg">Loading...</span></div>
+  </div>
+
+  <div class="card" id="chat-card">
+    <h2><span class="dot"></span> Chat <span id="chat-count" style="color:#8b949e;font-size:0.8em"></span></h2>
+    <div id="chat-content">
+      <div class="chat-log" id="chat-log"></div>
+      <form id="chat-form" class="chat-form" autocomplete="off">
+        <input type="text" id="chat-input" class="chat-input" placeholder="Type a message..." maxlength="256">
+        <button type="submit" class="chat-send">Send</button>
+      </form>
+      <div id="chat-status" class="chat-status"></div>
+    </div>
   </div>
 
   <div class="card" style="grid-column: 1 / -1;" id="lobby-card">
