.NET: Rename web API test to reflect new code, hide dashboard entries

--- a/csharp-api/test/Test/WebAPI/index.html
+++ b/csharp-api/test/Test/WebAPI/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>MHWilds Dashboard</title>
+<title>REFramework Dashboard</title>
 <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-<h1>Monster Hunter Wilds</h1>
+<h1 id="game-title">REFramework</h1>
 <p class="subtitle">REFramework.NET Live Dashboard &mdash; <a class="nav-link" href="/explorer.html">Object Explorer</a></p>
 
 <div class="grid">
