.NET: Add a bunch of RE9 info to WebAPI test dashboard

--- a/csharp-api/test/Test/WebAPI/index.html
+++ b/csharp-api/test/Test/WebAPI/index.html
@@ -46,6 +46,16 @@
     <div id="palico-content"><span class="error-msg">Loading...</span></div>
   </div>
 
+  <div class="card" id="gameinfo-card">
+    <h2><span class="dot"></span> Game Info</h2>
+    <div id="gameinfo-content"><span class="error-msg">Loading...</span></div>
+  </div>
+
+  <div class="card" id="enemies-card">
+    <h2><span class="dot"></span> Enemies <span id="enemies-count" style="color:#8b949e;font-size:0.8em"></span></h2>
+    <div class="enemies-list" id="enemies-content"><span class="error-msg">Loading...</span></div>
+  </div>
+
   <div class="card" id="huntlog-card">
     <h2><span class="dot"></span> Hunt Log <span id="huntlog-count" style="color:#8b949e;font-size:0.8em"></span></h2>
     <div class="huntlog-list" id="huntlog-content"><span class="error-msg">Loading...</span></div>
